# ESP32_TLS_OTA

./: .gitignore
Server_PoC/: requirements.txt
hello_world/: CMakeLists.txt  sdkconfig.old
hello_world/main/: CMakeLists.txt  hello_world_main.c
